Nailed down bug in wrong amounts of Congealed Shadows being taken from the Well Of Shadows when repairing Shadow Cloak.

--- a/ShadowCraft/.project
+++ b/ShadowCraft/.project
@@ -3,6 +3,7 @@
 	<name>ShadowCraft</name>
 	<comment></comment>
 	<projects>
+		<project>Minecraft</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
